Fixed statistical formulas in workbench.java and added comments to functions